Intro - collapsing - keep logo and menu fixed

--- a/css/site.css
+++ b/css/site.css
@@ -78,7 +78,7 @@ ul {
 }
 
 .section__intro-container--collapsed {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
